style: enhance archive page UI with header and update color variables

--- a/themes/geek/layout/archive.ejs
+++ b/themes/geek/layout/archive.ejs
@@ -1,4 +1,10 @@
 <div class="archive-container">
+  <div class="archive-header">
+    <h1 class="archive-title">Archive</h1>
+    <p class="archive-description">
+      Browse all articles organized by date
+    </p>
+  </div>
   <% let years = {}; %>
   <% page.posts.each(function(post){ %>
     <% const year = date(post.date, 'YYYY'); %>
