--- a/themes/geek/source/css/toc.css
+++ b/themes/geek/source/css/toc.css
@@ -238,7 +238,7 @@
     width: 100%;
     max-width: 100%;
     margin: 0;
-    padding: 1rem 0 !important;
+    padding: 1rem 0.5rem !important;
   }
 }
 
