--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/prism-code.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="icon" href="https://od.009100.xyz/api/raw/?path=/picture/Icon/shark.png" type="image/x-icon">
+  <link rel="icon" href="https://hexo.kygoho.win/upload/uploads/e900642d-8155-4134-9e4a-9e25aaffa2ba.jpg" type="image/x-icon">
   <link rel="stylesheet" href="/css/toc.css">
   
   <!-- MathJax Configuration -->
